--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -18,18 +18,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-node@v4
         with:
-          python-version: '3.13'
-      - name: Install dependencies
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: react-dashboard/package-lock.json
+      - name: Install React dashboard dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Generate dashboard
-        run: python task-manager/task_manager.py dashboard --output docs/index.html
+          cd react-dashboard
+          npm ci
+      - name: Build React dashboard
+        run: |
+          cd react-dashboard
+          npm run build
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: docs
+          path: react-dashboard/out
 
   deploy:
     needs: build
