--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,19 @@ on:
   pull_request:
 
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      react: ${{ steps.filter.outputs.react }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          filters: |
+            react:
+              - 'react-dashboard/**'
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -23,3 +36,21 @@ jobs:
         run: mypy .
       - name: Pytest
         run: pytest -q
+
+  react-test:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.react == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install React dependencies
+        run: |
+          cd react-dashboard
+          npm install
+      - name: React Tests
+        run: |
+          cd react-dashboard
+          npm test -- --coverage
