--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -7,11 +7,22 @@
     "build": "npm run generate-tasks && next build",
     "start": "next start",
     "export": "npm run generate-tasks && next build",
-    "generate-tasks": "node scripts/generate-tasks.js"
+    "generate-tasks": "node scripts/generate-tasks.js",
+    "test": "jest --coverage"
   },
   "dependencies": {
     "next": "14.2.0",
     "react": "18.3.0",
     "react-dom": "18.3.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@babel/preset-react": "^7.24.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.2.1",
+    "babel-jest": "^29.7.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0"
   }
 }
