--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
   pull_request:
 
+# Add explicit permissions
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
   changes:
     runs-on: ubuntu-latest
@@ -15,6 +20,8 @@ jobs:
       - uses: dorny/paths-filter@v3
         id: filter
         with:
+          # Explicitly pass the token
+          token: ${{ secrets.GITHUB_TOKEN }}
           filters: |
             react:
               - 'react-dashboard/**'
