--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -23,6 +23,7 @@
     "@testing-library/react": "^14.2.1",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.0-beta.3"
   }
 }
