--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -5,7 +5,27 @@ on:
     branches: [ main ]
   pull_request:
 
+# Add explicit permissions
+permissions:
+  contents: read
+  pull-requests: read
+
 jobs:
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      react: ${{ steps.filter.outputs.react }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: dorny/paths-filter@v3
+        id: filter
+        with:
+          # Explicitly pass the token
+          token: ${{ secrets.GITHUB_TOKEN }}
+          filters: |
+            react:
+              - 'react-dashboard/**'
+
   test:
     runs-on: ubuntu-latest
     steps:
@@ -23,3 +43,21 @@ jobs:
         run: mypy .
       - name: Pytest
         run: pytest -q
+
+  react-test:
+    runs-on: ubuntu-latest
+    needs: changes
+    if: needs.changes.outputs.react == 'true'
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - name: Install React dependencies
+        run: |
+          cd react-dashboard
+          npm install
+      - name: React Tests
+        run: |
+          cd react-dashboard
+          npm test -- --coverage
