--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -19,11 +19,16 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-env": "^7.24.0",
     "@babel/preset-react": "^7.24.0",
+    "@babel/preset-typescript": "^7.27.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.2.1",
+    "@types/node": "^22.15.27",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
     "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^30.0.0-beta.3"
+    "jest-environment-jsdom": "^30.0.0-beta.3",
+    "typescript": "^5.8.3"
   }
 }
