--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-typescript": "^7.27.1",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.2.1",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.15.27",
     "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
