[TM_WEB-30] Add epic support to web dashboard

--- a/react-dashboard/package.json
+++ b/react-dashboard/package.json
@@ -3,11 +3,12 @@
   "private": true,
   "version": "0.1.0",
   "scripts": {
-    "dev": "npm run generate-tasks && next dev",
-    "build": "npm run generate-tasks && next build",
+    "dev": "npm run generate-tasks && npm run generate-epics && next dev",
+    "build": "npm run generate-tasks && npm run generate-epics && next build",
     "start": "next start",
-    "export": "npm run generate-tasks && next build",
+    "export": "npm run generate-tasks && npm run generate-epics && next build",
     "generate-tasks": "node scripts/generate-tasks.js",
+    "generate-epics": "node scripts/generate-epics.js",
     "test": "jest --coverage"
   },
   "dependencies": {
